--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
   mail                      : 
   twitter                   : 
   github                    : 
-  youtube                   : @DistilRoblox
+  youtube                   : DistilRoblox
   stackoverflow             : 
   disqus                    : # disabled, since Disqus was displaying inappropriate ads. Change it to "detalk" when safe
   google_analytics          : 'G-'
